Gateway with Jwt Validation filter

--- a/Auth-service/src/main/resources/application.properties
+++ b/Auth-service/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=Auth-service
+server.port=8081
 
 spring.security.oauth2.client.registration.google.client-id=${CLIENT_ID}
 spring.security.oauth2.client.registration.google.client-secret=${CLIENT_SECRET}
